// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCard should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventCard
    event={
        Object {
            "category": "music",
            "description": "event description",
            "id": "E0-001-111209195-8",
            "image": null,
            "title": "Thursday Work Day, July 5 - Multiple Neighborhoods",
            "url": "fake.com",
          }
    }
    onFavorite={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="img-box"
>
          <div
                    className="img-event music2"
          />
</div>,
        <div
          className="event-info"
>
          <div
                    className="event-info-text"
          >
                    <h4>
                              Thursday Work Day, July 5 - Multiple Neighborhoods
                    </h4>
                    <p />
                    <p />
          </div>
          <div
                    className="btn-cont"
          >
                    <button
                              className="btn-fav"
                              onClick={[Function]}
                    >
                              <i
                                        className="far fa-heart"
                              />
                    </button>
                    <a
                              href="fake.com"
                              target="_blank"
                    >
                              SEE MORE
                    </a>
          </div>
</div>,
      ],
      "className": "EventCard ",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="img-event music2"
/>,
          "className": "img-box",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "img-event music2",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="event-info-text"
>
              <h4>
                            Thursday Work Day, July 5 - Multiple Neighborhoods
              </h4>
              <p />
              <p />
</div>,
            <div
              className="btn-cont"
>
              <button
                            className="btn-fav"
                            onClick={[Function]}
              >
                            <i
                                          className="far fa-heart"
                            />
              </button>
              <a
                            href="fake.com"
                            target="_blank"
              >
                            SEE MORE
              </a>
</div>,
          ],
          "className": "event-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Thursday Work Day, July 5 - Multiple Neighborhoods
</h4>,
                <p />,
                <p />,
              ],
              "className": "event-info-text",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                },
                "ref": null,
                "rendered": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="btn-fav"
                  onClick={[Function]}
>
                  <i
                                    className="far fa-heart"
                  />
</button>,
                <a
                  href="fake.com"
                  target="_blank"
>
                  SEE MORE
</a>,
              ],
              "className": "btn-cont",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    className="far fa-heart"
/>,
                  "className": "btn-fav",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "far fa-heart",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SEE MORE",
                  "href": "fake.com",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "SEE MORE",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="img-box"
>
            <div
                        className="img-event music2"
            />
</div>,
          <div
            className="event-info"
>
            <div
                        className="event-info-text"
            >
                        <h4>
                                    Thursday Work Day, July 5 - Multiple Neighborhoods
                        </h4>
                        <p />
                        <p />
            </div>
            <div
                        className="btn-cont"
            >
                        <button
                                    className="btn-fav"
                                    onClick={[Function]}
                        >
                                    <i
                                                className="far fa-heart"
                                    />
                        </button>
                        <a
                                    href="fake.com"
                                    target="_blank"
                        >
                                    SEE MORE
                        </a>
            </div>
</div>,
        ],
        "className": "EventCard ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="img-event music2"
/>,
            "className": "img-box",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "img-event music2",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="event-info-text"
>
                <h4>
                                Thursday Work Day, July 5 - Multiple Neighborhoods
                </h4>
                <p />
                <p />
</div>,
              <div
                className="btn-cont"
>
                <button
                                className="btn-fav"
                                onClick={[Function]}
                >
                                <i
                                                className="far fa-heart"
                                />
                </button>
                <a
                                href="fake.com"
                                target="_blank"
                >
                                SEE MORE
                </a>
</div>,
            ],
            "className": "event-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Thursday Work Day, July 5 - Multiple Neighborhoods
</h4>,
                  <p />,
                  <p />,
                ],
                "className": "event-info-text",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                  },
                  "ref": null,
                  "rendered": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn-fav"
                    onClick={[Function]}
>
                    <i
                                        className="far fa-heart"
                    />
</button>,
                  <a
                    href="fake.com"
                    target="_blank"
>
                    SEE MORE
</a>,
                ],
                "className": "btn-cont",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <i
                      className="far fa-heart"
/>,
                    "className": "btn-fav",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "far fa-heart",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SEE MORE",
                    "href": "fake.com",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "SEE MORE",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`EventCard should reflect UI change when event is favorited 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventCard
    event={
        Object {
            "category": "music",
            "description": "event description",
            "id": "E0-001-111209195-8",
            "image": null,
            "isFavorited": true,
            "title": "Thursday Work Day, July 5 - Multiple Neighborhoods",
            "url": "fake.com",
          }
    }
    onFavorite={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="img-box"
>
          <div
                    className="img-event music3"
          />
</div>,
        <div
          className="event-info"
>
          <div
                    className="event-info-text"
          >
                    <h4>
                              Thursday Work Day, July 5 - Multiple Neighborhoods
                    </h4>
                    <p />
                    <p />
          </div>
          <div
                    className="btn-cont"
          >
                    <button
                              className="btn-fav"
                              onClick={[Function]}
                    >
                              <i
                                        className="far fa-heart"
                              />
                    </button>
                    <a
                              href="fake.com"
                              target="_blank"
                    >
                              SEE MORE
                    </a>
          </div>
</div>,
      ],
      "className": "EventCard favorited",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="img-event music3"
/>,
          "className": "img-box",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "img-event music3",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="event-info-text"
>
              <h4>
                            Thursday Work Day, July 5 - Multiple Neighborhoods
              </h4>
              <p />
              <p />
</div>,
            <div
              className="btn-cont"
>
              <button
                            className="btn-fav"
                            onClick={[Function]}
              >
                            <i
                                          className="far fa-heart"
                            />
              </button>
              <a
                            href="fake.com"
                            target="_blank"
              >
                            SEE MORE
              </a>
</div>,
          ],
          "className": "event-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4>
                  Thursday Work Day, July 5 - Multiple Neighborhoods
</h4>,
                <p />,
                <p />,
              ],
              "className": "event-info-text",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                },
                "ref": null,
                "rendered": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="btn-fav"
                  onClick={[Function]}
>
                  <i
                                    className="far fa-heart"
                  />
</button>,
                <a
                  href="fake.com"
                  target="_blank"
>
                  SEE MORE
</a>,
              ],
              "className": "btn-cont",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <i
                    className="far fa-heart"
/>,
                  "className": "btn-fav",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "far fa-heart",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SEE MORE",
                  "href": "fake.com",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "SEE MORE",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="img-box"
>
            <div
                        className="img-event music3"
            />
</div>,
          <div
            className="event-info"
>
            <div
                        className="event-info-text"
            >
                        <h4>
                                    Thursday Work Day, July 5 - Multiple Neighborhoods
                        </h4>
                        <p />
                        <p />
            </div>
            <div
                        className="btn-cont"
            >
                        <button
                                    className="btn-fav"
                                    onClick={[Function]}
                        >
                                    <i
                                                className="far fa-heart"
                                    />
                        </button>
                        <a
                                    href="fake.com"
                                    target="_blank"
                        >
                                    SEE MORE
                        </a>
            </div>
</div>,
        ],
        "className": "EventCard favorited",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="img-event music3"
/>,
            "className": "img-box",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "img-event music3",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="event-info-text"
>
                <h4>
                                Thursday Work Day, July 5 - Multiple Neighborhoods
                </h4>
                <p />
                <p />
</div>,
              <div
                className="btn-cont"
>
                <button
                                className="btn-fav"
                                onClick={[Function]}
                >
                                <i
                                                className="far fa-heart"
                                />
                </button>
                <a
                                href="fake.com"
                                target="_blank"
                >
                                SEE MORE
                </a>
</div>,
            ],
            "className": "event-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h4>
                    Thursday Work Day, July 5 - Multiple Neighborhoods
</h4>,
                  <p />,
                  <p />,
                ],
                "className": "event-info-text",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                  },
                  "ref": null,
                  "rendered": "Thursday Work Day, July 5 - Multiple Neighborhoods",
                  "type": "h4",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn-fav"
                    onClick={[Function]}
>
                    <i
                                        className="far fa-heart"
                    />
</button>,
                  <a
                    href="fake.com"
                    target="_blank"
>
                    SEE MORE
</a>,
                ],
                "className": "btn-cont",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <i
                      className="far fa-heart"
/>,
                    "className": "btn-fav",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "far fa-heart",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SEE MORE",
                    "href": "fake.com",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "SEE MORE",
                  "type": "a",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
